--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.twitch.tv/?channel=plaqueboymax&amp;parent=https:FP.speakerbox.repl.co" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+<iframe src="https://player.twitch.tv/?channel=plaqueboymax&amp;parent=https:FP.speakerbox.repl.co" frameborder="0" allowfullscreen="true" scrolling="yes" height="378" width="620"></iframe>
